# bread

./: .gitignore  Cargo.toml  flake.nix  justfile  rust-toolchain.toml
.cargo/: config.toml
nixos/modules/system/boot/loader/bread/: bread-install.ts  bread.nix
scripts/: qemu-aarch64.sh  qemu-riscv64gc.sh  qemu-x86_64.sh
src/: main.rs
vm/: configuration.nix
