[package]
name = "bread"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
repository = "https://github.com/morr0ne/bread"
readme = "README.md"
publish = false

[dependencies]
effie = "0.0.1"
itoa = "1.0.14"
linux-raw-sys = { version = "0.9.3", default-features = false, features = [
    "no_std",
    "bootparam",
    "image",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
effie = { path = "../effie" }
